# lab

geoceph/cepheval/: reinstall.sh  setup.py
geoceph/cepheval/cepheval/: __init__.py  cecli.py
geoceph/exp/: cec.py  cecdraw.py  run.sh
gol/: Makefile  gol  gol.c  gol.c.char  gol.c.cpuwarm  gol.c.v0  gol.c.v1  gol.c.v2  output.1  pattern  pattern.c  run.sh  s1.csv
gol/data/cat-1w/: output.1  s1.csv
gol/data/cat-4c1d/: output  output.1  output.2  output.3  output.4  output.5  s1.csv  s2.csv  s3.csv  s4.csv  s5.csv
gol/data/cat-mth/: 1-th-1-way-output  1-th-3-way-output  1-th-f-way-output  1-th-ff-way-output  1-th-ffff-way-output  16-th-1-way-output  16-th-3-way-output  16-th-f-way-output  16-th-ff-way-output  16-th-ffff-way-output  2-th-1-way-output  2-th-3-way-output  2-th-f-way-output  2-th-ff-way-output  2-th-ffff-way-output  4-th-1-way-output  4-th-3-way-output  4-th-f-way-output  4-th-ff-way-output  4-th-ffff-way-output  8-th-1-way-output  8-th-3-way-output  8-th-f-way-output  8-th-ff-way-output  8-th-ffff-way-output
gol/data/cat-mth-no-sem/: 1-th-1-way-output  1-th-3-way-output  1-th-f-way-output  1-th-ff-way-output  1-th-ffff-way-output  16-th-1-way-output  16-th-3-way-output  16-th-f-way-output  16-th-ff-way-output  16-th-ffff-way-output  2-th-1-way-output  2-th-3-way-output  2-th-f-way-output  2-th-ff-way-output  2-th-ffff-way-output  4-th-1-way-output  4-th-3-way-output  4-th-f-way-output  4-th-ff-way-output  4-th-ffff-way-output  8-th-1-way-output  8-th-3-way-output  8-th-f-way-output  8-th-ff-way-output  8-th-ffff-way-output
gol/data/cat-rand/: 1-th-1-way-output  1-th-ffff-way-output
lfperf/: Makefile  lfperf.c  test.c
persistvar/: CMakeLists.txt  FilePersistLog.cpp  FilePersistLog.h  FilePersistLog.hpp  HLC.cpp  HLC.hpp  MemLog.cpp  MemLog.h  MemLog.hpp  PersistException.h  PersistException.hpp  PersistLog.cpp  PersistLog.h  PersistLog.hpp  PersistVar.h  Persistent.h  Persistent.hpp  build.sh  clean.sh  env.sh  test.cpp  tst.cpp  util.hpp
persistvar/eval/: clean.sh  dbg.sh  draw.py  parse.py  run.sh
